<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Music</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="labelDeviceID">设备ID</string>
    <string name="labelDeviceAlias">设备别名</string>
    
    <string name="login_label_signin">预览</string>
    <string name="login_label_setting">设置</string>
    <string name="login_video_signin">密拍</string>
    
    <string name="labelDeviceName">设备名称</string>
    <string name="labelNetSetting">网络设置</string>
    <string name="labelVideoQuality">视频质量</string>
    <string name="labelVideoCIF">CIF</string>
    <string name="labelVideoVGA">VGA</string>
    <string name="labelVideoD1">720P</string>
    <string name="labelAudioSwitch">音频上报</string>
    <string name="labelLocationSwitch">位置上报</string>
    <string name="labelServAddr">服务器地址</string>
    <string name="labelServPort">服务器端口</string>
    <string name="login_label_signout">退出</string>
    <string name="labelVideoSwitch">本地录像</string>
    <string name="YES">打开</string>
    <string name="NO">关闭</string>

</resources>
